fix journal area being too large on tall screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 #welcome {
     height: 85vh;
+    max-height: 900px;
 }
 
 #page {
